# Smart-Email-Client

./: .gitignore  LICENSE  README.md  example_cli.py  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  setup.sh  validate_setup.py
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: architecture.md  index.md  setup.md  usage.md
scripts/: build_docs.sh  run_tests.sh  setup_dev.sh
src/gmail_implementation/: README.md  pyproject.toml
src/gmail_implementation/src/gmail_implementation/: auth.py  client.py  transformer.py
src/gmail_implementation/tests/: test_auth.py  test_client.py  test_transformer.py
src/mail_client_interface/: README.md  pyproject.toml
src/mail_client_interface/src/mail_client_interface/: exceptions.py  models.py  protocols.py
src/mail_client_interface/tests/: test_exceptions.py  test_models.py  test_protocols.py
tests/integration/: test_gmail_integration.py
tests/system/: test_end_to_end.py
