[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-client-system"
version = "0.1.0"
description = "A component-based mail client system"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]

[tool.uv.workspace]
members = ["src/mail_client_interface", "src/gmail_implementation"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
