[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gmail-implementation"
version = "0.1.0"
description = "Gmail implementation for the mail client system"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mail-client-interface",
    "google-api-python-client>=2.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-auth-oauthlib>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
