[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mail-client-interface"
version = "0.1.0"
description = "Interface definitions for a mail client system"
authors = [{name = "Student", email = "student@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
